# pacsleaf

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/leaf-app/: Cargo.toml
crates/leaf-app/src/: browser.rs  main.rs  viewer.rs
crates/leaf-core/: Cargo.toml
crates/leaf-core/src/: config.rs  domain.rs  error.rs  event.rs  lib.rs
crates/leaf-db/: Cargo.toml
crates/leaf-db/src/: imagebox.rs  lib.rs  schema.rs
crates/leaf-dicom/: Cargo.toml
crates/leaf-dicom/src/: lib.rs  metadata.rs  overlay.rs  pixel.rs  volume.rs
crates/leaf-net/: Cargo.toml
crates/leaf-net/src/: dicomweb.rs  dimse.rs  lib.rs
crates/leaf-render/: Cargo.toml
crates/leaf-render/src/: lib.rs  lut.rs  viewport.rs  volume.rs
crates/leaf-tools/: Cargo.toml
crates/leaf-tools/src/: annotation.rs  lib.rs  measurement.rs
crates/leaf-ui/: Cargo.toml  build.rs
crates/leaf-ui/src/: lib.rs
crates/leaf-viewer/: Cargo.toml
crates/leaf-viewer/src/: lib.rs
ui/: app.slint
ui/components/: progress-dialog.slint  status-bar.slint  text-entry-dialog.slint  toolbar-button.slint
ui/theme/: theme.slint
ui/windows/: study-browser.slint  study-viewer.slint
