[workspace]
resolver = "2"
members = [
    "crates/leaf-core",
    "crates/leaf-db",
    "crates/leaf-dicom",
    "crates/leaf-net",
    "crates/leaf-render",
    "crates/leaf-tools",
    "crates/leaf-ui",
    "crates/leaf-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/knopkem/pacsleaf"
keywords = ["dicom", "medical-imaging", "pacs", "radiology", "viewer"]
categories = ["science", "visualization", "gui"]

[workspace.dependencies]
# Internal crates
leaf-core = { path = "crates/leaf-core", version = "0.1.0" }
leaf-db = { path = "crates/leaf-db", version = "0.1.0" }
leaf-dicom = { path = "crates/leaf-dicom", version = "0.1.0" }
leaf-net = { path = "crates/leaf-net", version = "0.1.0" }
leaf-render = { path = "crates/leaf-render", version = "0.1.0" }
leaf-tools = { path = "crates/leaf-tools", version = "0.1.0" }
leaf-ui = { path = "crates/leaf-ui", version = "0.1.0" }

# Sibling crates (local path dependencies)
dicom-toolkit-core = { path = "../dicom-toolkit-rs/crates/dicom-toolkit-core" }
dicom-toolkit-dict = { path = "../dicom-toolkit-rs/crates/dicom-toolkit-dict" }
dicom-toolkit-data = { path = "../dicom-toolkit-rs/crates/dicom-toolkit-data" }
dicom-toolkit-net = { path = "../dicom-toolkit-rs/crates/dicom-toolkit-net" }
dicom-toolkit-image = { path = "../dicom-toolkit-rs/crates/dicom-toolkit-image" }
dicom-toolkit-codec = { path = "../dicom-toolkit-rs/crates/dicom-toolkit-codec" }
volren-core = { path = "../volren-rs/crates/volren-core" }
volren-gpu = { path = "../volren-rs/crates/volren-gpu" }

# GUI
slint = { version = "1.12", features = ["unstable-wgpu-24"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
redb = "2"

# HTTP client (for DICOMweb)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }

# Math (consistent with volren-rs)
glam = { version = "0.29", features = ["bytemuck", "serde"] }

# GPU
wgpu = { version = "24", features = ["spirv"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
bytemuck = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
rayon = "1"
parking_lot = "0.12"
bytes = "1"
base64 = "0.22"
lru = "0.16.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rfd = "0.15"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
