[package]
name = "leaf-app"
description = "pacsleaf — Pure Rust medical imaging viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "pacsleaf"
path = "src/main.rs"

[dependencies]
leaf-core = { workspace = true }
leaf-db = { workspace = true }
leaf-dicom = { workspace = true }
leaf-net = { workspace = true }
leaf-render = { workspace = true }
leaf-viewer = { workspace = true }
leaf-tools = { workspace = true }
leaf-ui = { workspace = true }
slint = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
image = { workspace = true }
glam = { workspace = true }
rfd = { workspace = true }
lru = { workspace = true }
