[package]
name = "leaf-core"
description = "Core domain types and shared utilities for pacsleaf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
glam = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
uuid = { workspace = true }
