[package]
name = "leaf-net"
description = "PACS networking for pacsleaf (DIMSE + DICOMweb)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
leaf-core = { workspace = true }
dicom-toolkit-core = { workspace = true }
dicom-toolkit-dict = { workspace = true }
dicom-toolkit-data = { workspace = true }
dicom-toolkit-net = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
