[package]
name = "leaf-ui"
description = "Slint UI layer for pacsleaf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
leaf-core = { workspace = true }
leaf-db = { workspace = true }
leaf-dicom = { workspace = true }
leaf-net = { workspace = true }
leaf-render = { workspace = true }
leaf-tools = { workspace = true }
slint = { workspace = true }
wgpu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }

[build-dependencies]
slint-build = "1.12"
